removed jdk-17 profile