@@ -215,30 +215,6 @@
 						<configuration>
 							<argLine>
 								@{argLine}
-								--illegal-access=warn
-							</argLine>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>java-17</id>
-			<activation>
-				<jdk>[17,)</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<!-- FIXME: remove once https://github.com/jboss-javassist/javassist/issues/400 has been fixed -->
-							<!-- FIXME: remove once https://github.com/stefanbirkner/system-rules/issues/85 has been fixed -->
-							<argLine>
-								@{argLine}
-								--add-opens java.base/java.lang=ALL-UNNAMED
-								-Djava.security.manager=allow
 							</argLine>
 						</configuration>
 					</plugin>
